# SemanticKernel

./: README.md  main.py  pyproject.toml
Skills/Jokes/: config.json  skprompt.txt
Skills/Search/: WebSearch.py
