[tool.poetry]
name = "exploring-semantic-kernel"
version = "0.1.0"
description = ""
authors = ["ShivamGupta42 <mailme.shivam21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
semantic-kernel = "^0.4.5.dev0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
